@@ -2,7 +2,8 @@
 <html><head>
 
   
-  <meta name="generator" content="HTML Tidy, see www.w3.org"><title></title></head><body>
+  <meta name="generator" content="HTML Tidy, see www.w3.org"><title></title></head>
+<body>
 <center>
 <table border="1" bordercolor="gray" cellpadding="10" cellspacing="0" width="90%">
   <tbody>
@@ -5921,7 +5922,10 @@ delimited. &nbsp;A value of * may be given to specify ALL skills.<br>
             <td>* ITEMMASK</td>
             <td>the
 gotitem achievement uses this required mask to identify which item will
-trigger completion of the achievement. &nbsp;See help on ZAPPERMASK
+trigger completion of the achievement. &nbsp;<br>Multiple
+ITEMMASKs may be included by adding a number suffix. &nbsp; By default,
+a match on any itemmask will count, but ALL=T can be added as a
+separate argument to require all itemmasks to be matched.<br>See help on ZAPPERMASK
 for
 more information.</td>
           </tr>
