@@ -209,12 +209,13 @@
 #     [NUM] is the number of times retire must be used
 #     successfully before the achievement is gained.
 #
-# ... EVENT="GOTITEM" NUM=[NUMBER] ITEMMASK="[ITEMMASK]" 
+# ... EVENT="GOTITEM" NUM=[NUMBER] ITEMMASK="[ITEMMASK]" ((ALL=T/F) ITEMMASK2="[MASK]"...)
 #     [NUM] is the number of the items required to get the achievement, default 1.
 #     [ITEMMASK] is a standard mask denoting which items, when gotten, automatically
 #     complete this achievement.  Make sure it's a narrow filter! See archon help on 
-#     Zapper Masks (AHELP ZAPPERMASKS) from the command line for 
-#     syntax on zapper-masks.
+#     Zapper Masks (AHELP ZAPPERMASKS) from the command line for yntax on zapper-masks.
+#     Multiple ITEMMASKS may be specified.  Any mask will count, unless ALL=T, in which
+#     case all masks are required.
 #
 # ... EVENT="BIRTHS" NUM=[NUMBER] ZAPPERMASK="[ZAPPERMASK]" ...
 #     [NUM] is the number of children born where the player is one of the parents
